--- a/src/client/InternshipRecords.Client/wwwroot/css/app.css
+++ b/src/client/InternshipRecords.Client/wwwroot/css/app.css
@@ -40,6 +40,7 @@ a, .btn-link {
     color-scheme: light only;
     background: lightyellow;
     bottom: 0;
+    box-shadow: 0 -1px 2px #000000;
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
     display: none;
@@ -50,7 +51,7 @@ a, .btn-link {
     z-index: 1000;
 }
 
-    #blazor-error-ui .dismiss {
+#blazor-error-ui .dismiss {
         cursor: pointer;
         position: absolute;
         right: 0.75rem;
@@ -85,7 +86,7 @@ a, .btn-link {
 
         .loading-progress circle:last-child {
             stroke: #1b6ec2;
-            stroke-dasharray: calc(3.141 * var(--blazor-load-percentage, 0%) * 0.8), 500%;
+            stroke-dasharray: calc(3.141 * 0 * 0.8), 500%;
             transition: stroke-dasharray 0.05s ease-in-out;
         }
 
@@ -97,7 +98,7 @@ a, .btn-link {
 }
 
     .loading-progress-text:after {
-        content: var(--blazor-load-percentage-text, "Loading");
+        content: "Loading";
     }
 
 code {
